[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/images/ships/player ship.png" type="Texture" id=1]
[ext_resource path="res://characters/Player.gd" type="Script" id=2]
[ext_resource path="res://objects/LaserWeapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/EngineParticles.tscn" type="PackedScene" id=4]

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 1.1, 0, 1 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -32, 40, 28, -40, 28 )

[node name="LaserWeapon" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -54 )

[node name="RotationNode1" type="Node2D" parent="."]
position = Vector2( 0, 1 )

[node name="RotationNode2" type="Node2D" parent="."]

[node name="EngineParticles" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 43 )
